# src/api/controllers/agendamentos/aluno/agendarAvaliacaoController.ts
@@ -4,9 +4,9 @@ import { AgendarAvaliacaoService } from "../../../services/agendamentos/aluno/ag
 
 export class AgendarAvaliacaoController {
     async handle(request: Request, response: Response){
-      let {uid, dataAgendamento, ginasioId, treinadorId} = request.body;
+      let {uid, ginasioId, treinadorId} = request.body;
       
-      dataAgendamento = new Date(dataAgendamento);
+      const dataAgendamento = new Date(Date.now());
       const agendarAvaliacaoService = new AgendarAvaliacaoService();
       const resp = await agendarAvaliacaoService.execute({uid, dataAgendamento, ginasioId, treinadorId});
       response.json(resp);
